update the service: create a flask server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     container_name: speaker-diarization-worker
     build: .
     image: lintoai/linto-platform-speaker-diarization-worker:latest-unstable
+    volumes:
+      - ${LOGS_PATH}:/opt/logs
     ports:
       - target: 80
         published: 8888
+    env_file: .env
