Implement the speaker diarization worker

--- a/.envdefault
+++ b/.envdefault
@@ -1,1 +1,4 @@
+# The directory path where to save the logs of the service
 LOGS_PATH=/path/to/save/the/log/file
+# The directory path where is the 'swagger.yml' file saved
+SWAGGER_PATH=/path/to/directory/including/swagger/yml/file
