--- a/logging.cfg
+++ b/logging.cfg
@@ -12,11 +12,11 @@ level=DEBUG
 handlers=consoleHandler,fileHandler
 
 [formatter_fileFormatter]
-format=%(asctime)s %(levelname)s %(name)s : %(message)s
+format=%(asctime)s [%(levelname)s] %(name)s : %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(asctime)s %(levelname)s %(name)s : %(message)s
+format=%(asctime)s [%(levelname)s] %(name)s : %(message)s
 datefmt=
 
 [handler_consoleHandler]
